# swarmstar

./: .env.example  .envrc  .gitignore  .zshrc  404.html  LICENSE  MANIFEST.in  README.md  experiments.md  helper_script.py  index.html  journal.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  schemas.md  sitemap.xml  temp.py  temp_script.py  temppp.py  todo.md
.github/workflows/: ci.yml
aga_swarm/actions/: action_space.json  action_space_metadata.json  action_space_metadata.sqlite3
aga_swarm/memory/: memory_space_metadata.json
aga_swarm/swarm/: executor.py  internal_swarm_utils.py  oai_agent.py  setup_swarm.py  setup_swarm_space.py  swarm_config.py  swarm_lifecycle.py  swarm_master.py  swarm_node.py  swarm_setup.py  swarm_utils.py  types.py
concepts/: index.html
docs/: index.md
introduction/: index.html
local_openai_testing/: create_assistants.py  openai_config.py
old_swarm/: openai_config.py
public/: IMG_3848.heic
scripts/: action_space_utils.py  auto_action_space_utils.py  clear_swarm_space.py  create_sqlite3_db.py  helper_script.py  manual_write.py  update_internal_metadata.py
shared/: openai_config.py  openaiapi_reference.py  settings.py
stylesheets/: extra.css
swarm/: openai_config.py  settings.py
swarmstar/: __init__.py  config.py  context.py  core.py  internal_metadata.sqlite3  swarmstar.py
test/: how_to_run_tests.md  test_execute.py  test_swarm.py  test_tree_tree.py
testing/: temp_unit_testing.py  test.py
tests/: example_swarm_setup.py  example_test_config.py  history.txt  prompts.py  temp.py  temp2.py  test_get_default_tree.py  test_swarm.py  test_swarmstar.py  tests.md  validate_action_space.py
tool_building/: constants.json  docs.md  main_loop.py  manual_write.py  plan.md  settings.py  task.py  temp.py  test.py  write_functions.py
usage/: index.html
(+643 files in other folders)
