[tool.poetry]
name = "aga_swarm"
version = "0.1.2"
description = ""
authors = ["BrianP8701 <brianp8701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
importlib = "^1.0.4"
pydantic = "^2.5.3"
openai = "^1.9.0"
instructor = "^0.4.8"
azure-cosmos = "^4.5.1"
azure-storage-blob = "^12.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
