[tool.poetry]
name = "swarmstar"
version = "0.0.3"
description = ""
authors = ["BrianP8701 <brianp8701@gmail.com>"]
readme = "README.md"
include = ["swarmstar/internal_metadata/action_space.bson", "swarmstar/internal_metadata/action_space_metadata.json"]
documentation = "https://brianp8701.github.io/swarmstar/"

[tool.poetry.dependencies]
python = "^3.10"
importlib = "^1.0.4"
pydantic = "^2.5.3"
openai = "^1.9.0"
instructor = "^0.4.8"
azure-cosmos = "^4.5.1"
azure-storage-blob = "^12.19.0"
pymongo = "^4.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
python-dotenv = "^1.0.1"
coverage = "^7.4.2"

[tool.poetry.group.docs.dependencies]
mkdocs-material = {extras = ["imaging"], version = "^9.5.9"}
mkdocs = "^1.5.3"

[tool.poetry.group.test-docs.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
